@@ -2,6 +2,8 @@ ddetect (0.68) UNRELEASED; urgency=low
 
   * Joey Hess
     - Update to debhelper v4, and use its udeb support.
+  * Thiemo Seufer
+    - Cleanup match pattern for sd_mod, sr_mod in hw-detect.sh.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 13 Feb 2004 13:46:31 -0500
 
